# enum_traits

./: README.md  test.sh
lib/: Cargo.toml
lib/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs  lib.rs.bck
tests/: Cargo.toml
tests/src/: main.rs
