[package]
name = "enum_traits_macros"
version = "1.1.0"
authors = ["Lolirofle <lolipopple@hotmail.com>"]
description = "Syntax extension for the crate `enum_traits`"
#documentation = "..."
homepage = "https://github.com/Lolirofle/enum_traits"
repository = "https://github.com/Lolirofle/enum_traits.git"
#readme = "README.md"
keywords = ["enum","trait","traits"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "0.3"
syn = "0.10"
